<resources>
    <string name="app_name" translatable="false">Playlist marker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_application">Поделиться приложением</string>
    <string name="message_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_application_icon">Иконка для "Поделиться приложением"</string>
    <string name="dark_theme_icon">Иконка для "Темная тема"</string>
    <string name="message_support_icon">Иконка для "Написать в поддержку"</string>
    <string name="user_agreement_icon">Иконка для "Пользовательское соглашение"</string>
    <string name="url_android_developer" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="message_support_text_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message_support_text_default">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="message_support_error_email">Почтовый клиент не найден</string>
    <string name="user_agreement_url" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="user_agreement_error">Браузер не найден</string>
    <string name="activity_search_title">Поиск</string>
    <string name="recommend_android_developer">Рекомендую курс по Андроид-Разработке по ссылке: https://practicum.yandex.ru/android-developer/</string>
    <string name="not_found_songs">Ничего не нашлось</string>
    <string name="internet_problems">Проблемы со связью\n\n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="internet_problems_button">Обновить</string>
    <string name="history_search">Вы искали</string>
    <string name="clear_history_search">Очистить историю</string>
    <string name="audioPlayer_track_time">Длительность</string>
    <string name="audioPlayer_track_album">Альбом</string>
    <string name="audioPlayer_track_year">Год</string>
    <string name="audioPlayer_track_genre">Жанр</string>
    <string name="audioPlayer_track_country">Страна</string>
    <string name="track_artist_time" translatable="false">%s • %s</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="media_library_empty">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="not_created_playlist">Вы не создали\n ни одного плейлиста</string>
    <string name="title_new_playlist">Название*</string>
    <string name="description_new_playlist">Описание</string>
    <string name="create_new_playlist">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="final_playlist_creation">Завершить создание плейлиста?</string>
    <string name="unsaved_data_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel_create_playlist">Отмена</string>
    <string name="final_create_playlist">Завершить</string>
    <string name="playlist_time_and_count">%1$s минут • %2$s</string>
    <string name="dialog_title_remove_track_from_playlist">Хотите удалить трек?</string>
    <string name="dialog_confirm_remove_track_from_playlist">Да</string>
    <string name="dialog_failure_remove_track_from_playlist">Нет</string>
    <string name="notify_not_have_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_playlist">Поделиться плейлистом</string>
    <string name="current_playlist_menu_share">Поделиться</string>
    <string name="current_playlist_menu_edit_info">Редактировать информацию</string>
    <string name="current_playlist_menu_remove_playlist">Удалить плейлист</string>
    <string name="save_edit_playlist">Сохранить</string>
    <string name="edit_playlist_title">Редактировать</string>
    
    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="two">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="zero">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
</resources>
