<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FragmentBackgroundStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.settings.fragment.SettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settingsToolbar"
        style="@style/ToolbarStyle"
        app:title="@string/settings"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/darkTheme"
        style="@style/ActivitySettingsStyle"
        android:layout_marginTop="24dp"
        android:paddingEnd="15dp"
        app:thumbTint="@color/switch_thumb_color"
        app:trackTint="@color/switch_track_color"
        android:text="@string/dark_theme"
        android:contentDescription="@string/dark_theme_icon" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/shareApp"
        style="@style/ActivitySettingsStyle"
        android:drawableEnd="@drawable/share_icon"
        android:paddingEnd="16dp"
        android:text="@string/share_application"
        android:contentDescription="@string/share_application_icon"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/messageSupport"
        style="@style/ActivitySettingsStyle"
        android:drawableEnd="@drawable/support_icon"
        android:paddingEnd="14dp"
        android:text="@string/message_support"
        android:contentDescription="@string/message_support_icon"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/userAgreement"
        style="@style/ActivitySettingsStyle"
        android:paddingEnd="20dp"
        android:drawableEnd="@drawable/arrow_forward_icon"
        android:text="@string/user_agreement"
        android:contentDescription="@string/user_agreement_icon"/>
</LinearLayout>