<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SettingsStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/activitySettingsToolbar"
        style="@style/ToolbarStyle"
        app:navigationIcon="@drawable/arrow_back_icon"
        app:title="@string/settings"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/darkThemeLayout"
        style="@style/ActivitySettingsLinearLayoutStyle"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/activitySettingsToolbar"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/darkThemeText"
            style="@style/ActivitySettingsTextStyle"
            android:text="@string/dark_theme" />

        <Switch
            android:id="@+id/switch_dark_theme"
            android:layout_width="@dimen/activity_settings_size_icon"
            android:layout_height="@dimen/activity_settings_size_icon"
            android:contentDescription="@string/dark_theme_icon" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/shareAppLayout"
        style="@style/ActivitySettingsLinearLayoutStyle"
        app:layout_constraintTop_toBottomOf="@id/darkThemeLayout"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/shareAppText"
            style="@style/ActivitySettingsTextStyle"
            android:text="@string/share_application" />

        <ImageButton
            android:id="@+id/shareButton"
            style="@style/ActivitySettingsImageButtonStyle"
            android:src="@drawable/share_icon"
            android:contentDescription="@string/share_application_icon" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/supportLayout"
        style="@style/ActivitySettingsLinearLayoutStyle"
        app:layout_constraintTop_toBottomOf="@id/shareAppLayout"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/supportText"
            style="@style/ActivitySettingsTextStyle"
            android:text="@string/message_support" />

        <ImageButton
            android:id="@+id/supportImageButton"
            style="@style/ActivitySettingsImageButtonStyle"
            android:src="@drawable/support_icon"
            android:contentDescription="@string/share_application_icon" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/userAgreementLayout"
        style="@style/ActivitySettingsLinearLayoutStyle"
        app:layout_constraintTop_toBottomOf="@id/supportLayout"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/userAgreementText"
            style="@style/ActivitySettingsTextStyle"
            android:text="@string/user_agreement" />

        <ImageButton
            android:id="@+id/userAgreementImageButton"
            style="@style/ActivitySettingsImageButtonStyle"
            android:src="@drawable/arrow_forward_icon"
            android:contentDescription="@string/user_agreement_icon" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>