<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/FragmentBackgroundStyle"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.medialibrary.fragments.NewPlaylistFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/Toolbar"
        style="@style/ToolbarStyle"
        app:title="@string/new_playlist"
        app:navigationIcon="@drawable/arrow_back_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/playlist_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/icon_size"
        android:background="@drawable/new_playlist_photo_picker"
        android:layout_marginTop="26dp"
        android:scaleType="center"
        android:src="@drawable/ic_cover_playlist"
        app:layout_constraintTop_toBottomOf="@id/Toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <EditText
        android:id="@+id/new_playlist_title"
        style="@style/new_playlist_title_description_style"
        android:text="@string/title_new_playlist"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/playlist_image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/new_playlist_description"
        style="@style/new_playlist_title_description_style"
        android:text="@string/description_new_playlist"
        android:layout_marginTop="@dimen/main_screen_padding_left_right"
        app:layout_constraintTop_toBottomOf="@id/new_playlist_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/new_playlist_create"
        style="@style/new_playlist_create_style"
        android:text="@string/create_new_playlist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>