<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    android:paddingStart="@dimen/main_screen_padding_left_right"
    android:paddingEnd="@dimen/main_screen_padding_left_right"
    tools:context=".MainActivity">
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/main_screen_text_size"
            android:textColor="@color/white"
            android:layout_marginTop="14dp"
            tools:ignore="MissingConstraints" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="12dp">

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_layout_height"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textColor="@color/black_for_text"
            android:layout_marginBottom="@dimen/main_margin_top_bottom"
            android:foreground="?attr/selectableItemBackground"
            app:icon="@drawable/search_icon"
            app:iconPadding="1dp"
            app:iconGravity="textStart"
            app:iconTint="@color/black_for_text"
            app:cornerRadius="@dimen/corner_radius"/>

        <Button
            android:id="@+id/media_library"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_layout_height"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/main_margin_top_bottom"
            android:layout_marginBottom="@dimen/main_margin_top_bottom"
            android:backgroundTint="@color/white"
            android:text="@string/media_library"
            android:textColor="@color/black_for_text"
            app:icon="@drawable/library_icon"
            app:iconPadding="1dp"
            app:iconGravity="textStart"
            app:iconTint="@color/black_for_text"
            app:cornerRadius="@dimen/corner_radius"/>

        <Button
            android:id="@+id/settings"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_layout_height"
            android:layout_marginTop="@dimen/main_margin_top_bottom"
            android:layout_weight="1"
            android:layout_marginBottom="28dp"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textColor="@color/black_for_text"
            app:icon="@drawable/settings_icon"
            app:iconPadding="1dp"
            app:iconGravity="textStart"
            app:iconTint="@color/black_for_text"
            app:cornerRadius="@dimen/corner_radius"/>

    </LinearLayout>
</LinearLayout>