<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.medialibrary.fragments.CurrentPlaylistFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/edit_text_color">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomRightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/main_screen_padding_left_right"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomLeftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/main_screen_padding_left_right"/>

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/Toolbar"
            style="@style/ToolbarStyle"
            app:navigationIconTint="@color/black_for_text"
            app:navigationIcon="@drawable/arrow_back_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <FrameLayout
            android:id="@+id/current_playlist_image_container"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:background="@drawable/current_playlist_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="1:1">

            <ImageView
                android:id="@+id/current_playlist_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="center" />

            <ImageView
                android:id="@+id/current_playlist_placeholder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="24dp"
                android:src="@drawable/placeholder"/>
        </FrameLayout>

        <TextView
            android:id="@+id/title_current_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Best Songs 2021"
            android:fontFamily="@font/ys_display_bold"
            android:textFontWeight="700"
            android:textSize="24sp"
            android:textColor="@color/black_for_text"
            android:letterSpacing="0"
            android:layout_marginTop="@dimen/icon_size"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="@id/bottomLeftGuideline"
            app:layout_constraintTop_toBottomOf="@id/current_playlist_image_container"/>

        <TextView
            android:id="@+id/description_current_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="2022"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="18sp"
            android:textFontWeight="400"
            android:textColor="@color/black_for_text"
            android:textAllCaps="false"
            android:letterSpacing="0"
            android:layout_marginTop="@dimen/main_margin_top_bottom"
            app:layout_constraintStart_toStartOf="@id/bottomLeftGuideline"
            app:layout_constraintTop_toBottomOf="@id/title_current_playlist"/>

        <TextView
            android:id="@+id/time_and_counter_songs_current_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="300 минут • 98 треков"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="18sp"
            android:textFontWeight="400"
            android:textColor="@color/black_for_text"
            android:textAllCaps="false"
            android:letterSpacing="0"
            android:layout_marginTop="@dimen/main_margin_top_bottom"
            app:layout_constraintStart_toStartOf="@id/bottomLeftGuideline"
            app:layout_constraintTop_toBottomOf="@id/description_current_playlist"/>

        <ImageView
            android:id="@+id/share_current_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share_icon"
            android:layout_marginTop="14dp"
            app:layout_constraintStart_toStartOf="@id/bottomLeftGuideline"
            app:layout_constraintTop_toBottomOf="@id/time_and_counter_songs_current_playlist"/>

        <ImageView
            android:id="@+id/menu_current_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/menu_icon"
            android:layout_marginTop="14dp"
            android:layout_marginStart="40dp"
            app:layout_constraintStart_toStartOf="@id/bottomLeftGuideline"
            app:layout_constraintTop_toBottomOf="@id/time_and_counter_songs_current_playlist"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/bottom_sheet_container_current_playlist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bottom_sheet_background"
        app:behavior_hideable="true"
        app:behavior_peekHeight="266dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/main_margin_top_bottom"
            android:background="@drawable/bottom_sheet_view"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/current_playlist_songs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_sheet_menu_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bottom_sheet_background"
        android:visibility="gone"
        app:behavior_hideable="true"
        app:behavior_peekHeight="383dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/main_margin_top_bottom"
            android:background="@drawable/bottom_sheet_view"/>

        <include
            android:id="@+id/included_playlist_item"
            layout="@layout/item_playlist_in_current_playlist"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/share_playlist"
            style="@style/ActivitySettingsStyle"
            android:text="@string/current_playlist_menu_share"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/edit_playlist"
            style="@style/ActivitySettingsStyle"
            android:text="@string/current_playlist_menu_edit_info"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/remove_playlist"
            style="@style/ActivitySettingsStyle"
            android:text="@string/current_playlist_menu_remove_playlist"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>